parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    TYPE

Grammar

Rule 0     S' -> programaGO
Rule 1     programaGO -> defpackage defimport funcdecls
Rule 2     defpackage -> PACKAGE ID
Rule 3     defimport -> IMPORT ID
Rule 4     funcdecl -> FUNC ID signature body
Rule 5     funcdecls -> funcdecl
Rule 6     funcdecls -> funcdecl funcdecls
Rule 7     signature -> LPAREN sigparams RPAREN
Rule 8     signature -> LPAREN sigparams RPAREN funcreturn
Rule 9     signature -> LPAREN RPAREN
Rule 10    signature -> LPAREN RPAREN funcreturn
Rule 11    sigparams -> ID type
Rule 12    sigparams -> ID type COMMA sigparams
Rule 13    funcreturn -> type
Rule 14    funcreturn -> LPAREN type RPAREN
Rule 15    body -> LCHAVES stms RCHAVES
Rule 16    body -> LCHAVES RCHAVES
Rule 17    stms -> statement
Rule 18    stms -> statement stms
Rule 19    statement -> statement1
Rule 20    statement -> statement2
Rule 21    statement1 -> IF LPAREN exp RPAREN statement1 ELSE statement1
Rule 22    statement1 -> IF exp statement1 ELSE statement1
Rule 23    statement1 -> declaration
Rule 24    statement1 -> for
Rule 25    statement1 -> statement1
Rule 26    statement1 -> statement2
Rule 27    statement1 -> return
Rule 28    statement2 -> IF LPAREN exp RPAREN statement
Rule 29    statement2 -> IF exp statement
Rule 30    statement2 -> IF exp statement1 ELSE statement2
Rule 31    statement2 -> IF LPAREN exp RPAREN statement1 ELSE statement2
Rule 32    for -> FOR
Rule 33    for -> FOR exp
Rule 34    for -> FOR exp SEMICOLON exp SEMICOLON exp
Rule 35    for -> FOR RANGE exp
Rule 36    for -> FOR exp COMMA exp ASSIGN RANGE exp
Rule 37    declaration -> ID type
Rule 38    declaration -> ID type ASSIGN exp
Rule 39    declaration -> ID type COLONEQ exp
Rule 40    type -> INT
Rule 41    type -> STRING
Rule 42    type -> VAR
Rule 43    type -> BOOL
Rule 44    exp -> exp1
Rule 45    exp1 -> NUMBER
Rule 46    exp1 -> STRING
Rule 47    exp1 -> ID
Rule 48    exp1 -> TRUE
Rule 49    exp1 -> FALSE
Rule 50    exp1 -> LPAREN exp RPAREN
Rule 51    exp1 -> exp2
Rule 52    exp2 -> exp2 DPLUS
Rule 53    exp2 -> exp2 DMINUS
Rule 54    exp2 -> NOT exp2
Rule 55    exp2 -> exp3
Rule 56    exp3 -> exp3 TIMES exp4
Rule 57    exp3 -> exp3 DIVIDE exp4
Rule 58    exp3 -> exp3 MOD exp4
Rule 59    exp3 -> exp4
Rule 60    exp4 -> exp4 PLUS exp5
Rule 61    exp4 -> exp4 MINUS exp5
Rule 62    exp4 -> exp5
Rule 63    exp5 -> exp5 LESS exp6
Rule 64    exp5 -> exp5 GREATER exp6
Rule 65    exp5 -> exp5 LESS_EQUAL exp6
Rule 66    exp5 -> exp5 GREATER_EQUAL exp6
Rule 67    exp5 -> exp6
Rule 68    exp6 -> exp6 EQUALS exp7
Rule 69    exp6 -> exp6 DIFFERENT exp7
Rule 70    exp6 -> exp7
Rule 71    exp7 -> exp7 AND exp8
Rule 72    exp7 -> exp8
Rule 73    exp8 -> exp8 OR exp9
Rule 74    exp8 -> exp9
Rule 75    exp9 -> exp9 ASSIGN exp1
Rule 76    exp9 -> exp9 COLONEQ exp1
Rule 77    exp9 -> exp1
Rule 78    return -> RETURN exp
Rule 79    return -> RETURN

Terminals, with rules where they appear

AND                  : 71
ASSIGN               : 36 38 75
BOOL                 : 43
COLONEQ              : 39 76
COMMA                : 12 36
DIFFERENT            : 69
DIVIDE               : 57
DMINUS               : 53
DPLUS                : 52
ELSE                 : 21 22 30 31
EQUALS               : 68
FALSE                : 49
FOR                  : 32 33 34 35 36
FUNC                 : 4
GREATER              : 64
GREATER_EQUAL        : 66
ID                   : 2 3 4 11 12 37 38 39 47
IF                   : 21 22 28 29 30 31
IMPORT               : 3
INT                  : 40
LCHAVES              : 15 16
LESS                 : 63
LESS_EQUAL           : 65
LPAREN               : 7 8 9 10 14 21 28 31 50
MINUS                : 61
MOD                  : 58
NOT                  : 54
NUMBER               : 45
OR                   : 73
PACKAGE              : 2
PLUS                 : 60
RANGE                : 35 36
RCHAVES              : 15 16
RETURN               : 78 79
RPAREN               : 7 8 9 10 14 21 28 31 50
SEMICOLON            : 34 34
STRING               : 41 46
TIMES                : 56
TRUE                 : 48
TYPE                 : 
VAR                  : 42
error                : 

Nonterminals, with rules where they appear

body                 : 4
declaration          : 23
defimport            : 1
defpackage           : 1
exp                  : 21 22 28 29 30 31 33 34 34 34 35 36 36 36 38 39 50 78
exp1                 : 44 75 76 77
exp2                 : 51 52 53 54
exp3                 : 55 56 57 58
exp4                 : 56 57 58 59 60 61
exp5                 : 60 61 62 63 64 65 66
exp6                 : 63 64 65 66 67 68 69
exp7                 : 68 69 70 71
exp8                 : 71 72 73
exp9                 : 73 74 75 76
for                  : 24
funcdecl             : 5 6
funcdecls            : 1 6
funcreturn           : 8 10
programaGO           : 0
return               : 27
signature            : 4
sigparams            : 7 8 12
statement            : 17 18 28 29
statement1           : 19 21 21 22 22 25 30 31
statement2           : 20 26 30 31
stms                 : 15 18
type                 : 11 12 13 14 37 38 39

Parsing method: LALR

state 0

    (0) S' -> . programaGO
    (1) programaGO -> . defpackage defimport funcdecls
    (2) defpackage -> . PACKAGE ID

    PACKAGE         shift and go to state 3

    programaGO                     shift and go to state 1
    defpackage                     shift and go to state 2

state 1

    (0) S' -> programaGO .



state 2

    (1) programaGO -> defpackage . defimport funcdecls
    (3) defimport -> . IMPORT ID

    IMPORT          shift and go to state 5

    defimport                      shift and go to state 4

state 3

    (2) defpackage -> PACKAGE . ID

    ID              shift and go to state 6


state 4

    (1) programaGO -> defpackage defimport . funcdecls
    (5) funcdecls -> . funcdecl
    (6) funcdecls -> . funcdecl funcdecls
    (4) funcdecl -> . FUNC ID signature body

    FUNC            shift and go to state 9

    funcdecls                      shift and go to state 7
    funcdecl                       shift and go to state 8

state 5

    (3) defimport -> IMPORT . ID

    ID              shift and go to state 10


state 6

    (2) defpackage -> PACKAGE ID .

    IMPORT          reduce using rule 2 (defpackage -> PACKAGE ID .)


state 7

    (1) programaGO -> defpackage defimport funcdecls .

    $end            reduce using rule 1 (programaGO -> defpackage defimport funcdecls .)


state 8

    (5) funcdecls -> funcdecl .
    (6) funcdecls -> funcdecl . funcdecls
    (5) funcdecls -> . funcdecl
    (6) funcdecls -> . funcdecl funcdecls
    (4) funcdecl -> . FUNC ID signature body

    $end            reduce using rule 5 (funcdecls -> funcdecl .)
    FUNC            shift and go to state 9

    funcdecl                       shift and go to state 8
    funcdecls                      shift and go to state 11

state 9

    (4) funcdecl -> FUNC . ID signature body

    ID              shift and go to state 12


state 10

    (3) defimport -> IMPORT ID .

    FUNC            reduce using rule 3 (defimport -> IMPORT ID .)


state 11

    (6) funcdecls -> funcdecl funcdecls .

    $end            reduce using rule 6 (funcdecls -> funcdecl funcdecls .)


state 12

    (4) funcdecl -> FUNC ID . signature body
    (7) signature -> . LPAREN sigparams RPAREN
    (8) signature -> . LPAREN sigparams RPAREN funcreturn
    (9) signature -> . LPAREN RPAREN
    (10) signature -> . LPAREN RPAREN funcreturn

    LPAREN          shift and go to state 14

    signature                      shift and go to state 13

state 13

    (4) funcdecl -> FUNC ID signature . body
    (15) body -> . LCHAVES stms RCHAVES
    (16) body -> . LCHAVES RCHAVES

    LCHAVES         shift and go to state 16

    body                           shift and go to state 15

state 14

    (7) signature -> LPAREN . sigparams RPAREN
    (8) signature -> LPAREN . sigparams RPAREN funcreturn
    (9) signature -> LPAREN . RPAREN
    (10) signature -> LPAREN . RPAREN funcreturn
    (11) sigparams -> . ID type
    (12) sigparams -> . ID type COMMA sigparams

    RPAREN          shift and go to state 18
    ID              shift and go to state 19

    sigparams                      shift and go to state 17

state 15

    (4) funcdecl -> FUNC ID signature body .

    FUNC            reduce using rule 4 (funcdecl -> FUNC ID signature body .)
    $end            reduce using rule 4 (funcdecl -> FUNC ID signature body .)


state 16

    (15) body -> LCHAVES . stms RCHAVES
    (16) body -> LCHAVES . RCHAVES
    (17) stms -> . statement
    (18) stms -> . statement stms
    (19) statement -> . statement1
    (20) statement -> . statement2
    (21) statement1 -> . IF LPAREN exp RPAREN statement1 ELSE statement1
    (22) statement1 -> . IF exp statement1 ELSE statement1
    (23) statement1 -> . declaration
    (24) statement1 -> . for
    (25) statement1 -> . statement1
    (26) statement1 -> . statement2
    (27) statement1 -> . return
    (28) statement2 -> . IF LPAREN exp RPAREN statement
    (29) statement2 -> . IF exp statement
    (30) statement2 -> . IF exp statement1 ELSE statement2
    (31) statement2 -> . IF LPAREN exp RPAREN statement1 ELSE statement2
    (37) declaration -> . ID type
    (38) declaration -> . ID type ASSIGN exp
    (39) declaration -> . ID type COLONEQ exp
    (32) for -> . FOR
    (33) for -> . FOR exp
    (34) for -> . FOR exp SEMICOLON exp SEMICOLON exp
    (35) for -> . FOR RANGE exp
    (36) for -> . FOR exp COMMA exp ASSIGN RANGE exp
    (78) return -> . RETURN exp
    (79) return -> . RETURN

    RCHAVES         shift and go to state 21
    IF              shift and go to state 25
    ID              shift and go to state 29
    FOR             shift and go to state 30
    RETURN          shift and go to state 31

    stms                           shift and go to state 20
    statement                      shift and go to state 22
    statement1                     shift and go to state 23
    statement2                     shift and go to state 24
    declaration                    shift and go to state 26
    for                            shift and go to state 27
    return                         shift and go to state 28

state 17

    (7) signature -> LPAREN sigparams . RPAREN
    (8) signature -> LPAREN sigparams . RPAREN funcreturn

    RPAREN          shift and go to state 32


state 18

    (9) signature -> LPAREN RPAREN .
    (10) signature -> LPAREN RPAREN . funcreturn
    (13) funcreturn -> . type
    (14) funcreturn -> . LPAREN type RPAREN
    (40) type -> . INT
    (41) type -> . STRING
    (42) type -> . VAR
    (43) type -> . BOOL

    LCHAVES         reduce using rule 9 (signature -> LPAREN RPAREN .)
    LPAREN          shift and go to state 33
    INT             shift and go to state 36
    STRING          shift and go to state 37
    VAR             shift and go to state 38
    BOOL            shift and go to state 39

    funcreturn                     shift and go to state 34
    type                           shift and go to state 35

state 19

    (11) sigparams -> ID . type
    (12) sigparams -> ID . type COMMA sigparams
    (40) type -> . INT
    (41) type -> . STRING
    (42) type -> . VAR
    (43) type -> . BOOL

    INT             shift and go to state 36
    STRING          shift and go to state 37
    VAR             shift and go to state 38
    BOOL            shift and go to state 39

    type                           shift and go to state 40

state 20

    (15) body -> LCHAVES stms . RCHAVES

    RCHAVES         shift and go to state 41


state 21

    (16) body -> LCHAVES RCHAVES .

    FUNC            reduce using rule 16 (body -> LCHAVES RCHAVES .)
    $end            reduce using rule 16 (body -> LCHAVES RCHAVES .)


state 22

    (17) stms -> statement .
    (18) stms -> statement . stms
    (17) stms -> . statement
    (18) stms -> . statement stms
    (19) statement -> . statement1
    (20) statement -> . statement2
    (21) statement1 -> . IF LPAREN exp RPAREN statement1 ELSE statement1
    (22) statement1 -> . IF exp statement1 ELSE statement1
    (23) statement1 -> . declaration
    (24) statement1 -> . for
    (25) statement1 -> . statement1
    (26) statement1 -> . statement2
    (27) statement1 -> . return
    (28) statement2 -> . IF LPAREN exp RPAREN statement
    (29) statement2 -> . IF exp statement
    (30) statement2 -> . IF exp statement1 ELSE statement2
    (31) statement2 -> . IF LPAREN exp RPAREN statement1 ELSE statement2
    (37) declaration -> . ID type
    (38) declaration -> . ID type ASSIGN exp
    (39) declaration -> . ID type COLONEQ exp
    (32) for -> . FOR
    (33) for -> . FOR exp
    (34) for -> . FOR exp SEMICOLON exp SEMICOLON exp
    (35) for -> . FOR RANGE exp
    (36) for -> . FOR exp COMMA exp ASSIGN RANGE exp
    (78) return -> . RETURN exp
    (79) return -> . RETURN

    RCHAVES         reduce using rule 17 (stms -> statement .)
    IF              shift and go to state 25
    ID              shift and go to state 29
    FOR             shift and go to state 30
    RETURN          shift and go to state 31

    statement                      shift and go to state 22
    stms                           shift and go to state 42
    statement1                     shift and go to state 23
    statement2                     shift and go to state 24
    declaration                    shift and go to state 26
    for                            shift and go to state 27
    return                         shift and go to state 28

state 23

    (19) statement -> statement1 .
    (25) statement1 -> statement1 .

  ! reduce/reduce conflict for IF resolved using rule 19 (statement -> statement1 .)
  ! reduce/reduce conflict for ID resolved using rule 19 (statement -> statement1 .)
  ! reduce/reduce conflict for FOR resolved using rule 19 (statement -> statement1 .)
  ! reduce/reduce conflict for RETURN resolved using rule 19 (statement -> statement1 .)
  ! reduce/reduce conflict for RCHAVES resolved using rule 19 (statement -> statement1 .)
    IF              reduce using rule 19 (statement -> statement1 .)
    ID              reduce using rule 19 (statement -> statement1 .)
    FOR             reduce using rule 19 (statement -> statement1 .)
    RETURN          reduce using rule 19 (statement -> statement1 .)
    RCHAVES         reduce using rule 19 (statement -> statement1 .)

  ! IF              [ reduce using rule 25 (statement1 -> statement1 .) ]
  ! ID              [ reduce using rule 25 (statement1 -> statement1 .) ]
  ! FOR             [ reduce using rule 25 (statement1 -> statement1 .) ]
  ! RETURN          [ reduce using rule 25 (statement1 -> statement1 .) ]
  ! RCHAVES         [ reduce using rule 25 (statement1 -> statement1 .) ]


state 24

    (20) statement -> statement2 .
    (26) statement1 -> statement2 .

  ! reduce/reduce conflict for IF resolved using rule 20 (statement -> statement2 .)
  ! reduce/reduce conflict for ID resolved using rule 20 (statement -> statement2 .)
  ! reduce/reduce conflict for FOR resolved using rule 20 (statement -> statement2 .)
  ! reduce/reduce conflict for RETURN resolved using rule 20 (statement -> statement2 .)
  ! reduce/reduce conflict for RCHAVES resolved using rule 20 (statement -> statement2 .)
    IF              reduce using rule 20 (statement -> statement2 .)
    ID              reduce using rule 20 (statement -> statement2 .)
    FOR             reduce using rule 20 (statement -> statement2 .)
    RETURN          reduce using rule 20 (statement -> statement2 .)
    RCHAVES         reduce using rule 20 (statement -> statement2 .)

  ! IF              [ reduce using rule 26 (statement1 -> statement2 .) ]
  ! ID              [ reduce using rule 26 (statement1 -> statement2 .) ]
  ! FOR             [ reduce using rule 26 (statement1 -> statement2 .) ]
  ! RETURN          [ reduce using rule 26 (statement1 -> statement2 .) ]
  ! RCHAVES         [ reduce using rule 26 (statement1 -> statement2 .) ]


state 25

    (21) statement1 -> IF . LPAREN exp RPAREN statement1 ELSE statement1
    (22) statement1 -> IF . exp statement1 ELSE statement1
    (28) statement2 -> IF . LPAREN exp RPAREN statement
    (29) statement2 -> IF . exp statement
    (30) statement2 -> IF . exp statement1 ELSE statement2
    (31) statement2 -> IF . LPAREN exp RPAREN statement1 ELSE statement2
    (44) exp -> . exp1
    (45) exp1 -> . NUMBER
    (46) exp1 -> . STRING
    (47) exp1 -> . ID
    (48) exp1 -> . TRUE
    (49) exp1 -> . FALSE
    (50) exp1 -> . LPAREN exp RPAREN
    (51) exp1 -> . exp2
    (52) exp2 -> . exp2 DPLUS
    (53) exp2 -> . exp2 DMINUS
    (54) exp2 -> . NOT exp2
    (55) exp2 -> . exp3
    (56) exp3 -> . exp3 TIMES exp4
    (57) exp3 -> . exp3 DIVIDE exp4
    (58) exp3 -> . exp3 MOD exp4
    (59) exp3 -> . exp4
    (60) exp4 -> . exp4 PLUS exp5
    (61) exp4 -> . exp4 MINUS exp5
    (62) exp4 -> . exp5
    (63) exp5 -> . exp5 LESS exp6
    (64) exp5 -> . exp5 GREATER exp6
    (65) exp5 -> . exp5 LESS_EQUAL exp6
    (66) exp5 -> . exp5 GREATER_EQUAL exp6
    (67) exp5 -> . exp6
    (68) exp6 -> . exp6 EQUALS exp7
    (69) exp6 -> . exp6 DIFFERENT exp7
    (70) exp6 -> . exp7
    (71) exp7 -> . exp7 AND exp8
    (72) exp7 -> . exp8
    (73) exp8 -> . exp8 OR exp9
    (74) exp8 -> . exp9
    (75) exp9 -> . exp9 ASSIGN exp1
    (76) exp9 -> . exp9 COLONEQ exp1
    (77) exp9 -> . exp1

    LPAREN          shift and go to state 43
    NUMBER          shift and go to state 46
    STRING          shift and go to state 47
    ID              shift and go to state 48
    TRUE            shift and go to state 49
    FALSE           shift and go to state 50
    NOT             shift and go to state 52

    exp                            shift and go to state 44
    exp1                           shift and go to state 45
    exp2                           shift and go to state 51
    exp3                           shift and go to state 53
    exp4                           shift and go to state 54
    exp5                           shift and go to state 55
    exp6                           shift and go to state 56
    exp7                           shift and go to state 57
    exp8                           shift and go to state 58
    exp9                           shift and go to state 59

state 26

    (23) statement1 -> declaration .

    IF              reduce using rule 23 (statement1 -> declaration .)
    ID              reduce using rule 23 (statement1 -> declaration .)
    FOR             reduce using rule 23 (statement1 -> declaration .)
    RETURN          reduce using rule 23 (statement1 -> declaration .)
    RCHAVES         reduce using rule 23 (statement1 -> declaration .)
    ELSE            reduce using rule 23 (statement1 -> declaration .)


state 27

    (24) statement1 -> for .

    IF              reduce using rule 24 (statement1 -> for .)
    ID              reduce using rule 24 (statement1 -> for .)
    FOR             reduce using rule 24 (statement1 -> for .)
    RETURN          reduce using rule 24 (statement1 -> for .)
    RCHAVES         reduce using rule 24 (statement1 -> for .)
    ELSE            reduce using rule 24 (statement1 -> for .)


state 28

    (27) statement1 -> return .

    IF              reduce using rule 27 (statement1 -> return .)
    ID              reduce using rule 27 (statement1 -> return .)
    FOR             reduce using rule 27 (statement1 -> return .)
    RETURN          reduce using rule 27 (statement1 -> return .)
    RCHAVES         reduce using rule 27 (statement1 -> return .)
    ELSE            reduce using rule 27 (statement1 -> return .)


state 29

    (37) declaration -> ID . type
    (38) declaration -> ID . type ASSIGN exp
    (39) declaration -> ID . type COLONEQ exp
    (40) type -> . INT
    (41) type -> . STRING
    (42) type -> . VAR
    (43) type -> . BOOL

    INT             shift and go to state 36
    STRING          shift and go to state 37
    VAR             shift and go to state 38
    BOOL            shift and go to state 39

    type                           shift and go to state 60

state 30

    (32) for -> FOR .
    (33) for -> FOR . exp
    (34) for -> FOR . exp SEMICOLON exp SEMICOLON exp
    (35) for -> FOR . RANGE exp
    (36) for -> FOR . exp COMMA exp ASSIGN RANGE exp
    (44) exp -> . exp1
    (45) exp1 -> . NUMBER
    (46) exp1 -> . STRING
    (47) exp1 -> . ID
    (48) exp1 -> . TRUE
    (49) exp1 -> . FALSE
    (50) exp1 -> . LPAREN exp RPAREN
    (51) exp1 -> . exp2
    (52) exp2 -> . exp2 DPLUS
    (53) exp2 -> . exp2 DMINUS
    (54) exp2 -> . NOT exp2
    (55) exp2 -> . exp3
    (56) exp3 -> . exp3 TIMES exp4
    (57) exp3 -> . exp3 DIVIDE exp4
    (58) exp3 -> . exp3 MOD exp4
    (59) exp3 -> . exp4
    (60) exp4 -> . exp4 PLUS exp5
    (61) exp4 -> . exp4 MINUS exp5
    (62) exp4 -> . exp5
    (63) exp5 -> . exp5 LESS exp6
    (64) exp5 -> . exp5 GREATER exp6
    (65) exp5 -> . exp5 LESS_EQUAL exp6
    (66) exp5 -> . exp5 GREATER_EQUAL exp6
    (67) exp5 -> . exp6
    (68) exp6 -> . exp6 EQUALS exp7
    (69) exp6 -> . exp6 DIFFERENT exp7
    (70) exp6 -> . exp7
    (71) exp7 -> . exp7 AND exp8
    (72) exp7 -> . exp8
    (73) exp8 -> . exp8 OR exp9
    (74) exp8 -> . exp9
    (75) exp9 -> . exp9 ASSIGN exp1
    (76) exp9 -> . exp9 COLONEQ exp1
    (77) exp9 -> . exp1

  ! shift/reduce conflict for ID resolved as shift
    IF              reduce using rule 32 (for -> FOR .)
    FOR             reduce using rule 32 (for -> FOR .)
    RETURN          reduce using rule 32 (for -> FOR .)
    RCHAVES         reduce using rule 32 (for -> FOR .)
    ELSE            reduce using rule 32 (for -> FOR .)
    RANGE           shift and go to state 62
    NUMBER          shift and go to state 46
    STRING          shift and go to state 47
    ID              shift and go to state 48
    TRUE            shift and go to state 49
    FALSE           shift and go to state 50
    LPAREN          shift and go to state 63
    NOT             shift and go to state 52

  ! ID              [ reduce using rule 32 (for -> FOR .) ]

    exp                            shift and go to state 61
    exp1                           shift and go to state 45
    exp2                           shift and go to state 51
    exp3                           shift and go to state 53
    exp4                           shift and go to state 54
    exp5                           shift and go to state 55
    exp6                           shift and go to state 56
    exp7                           shift and go to state 57
    exp8                           shift and go to state 58
    exp9                           shift and go to state 59

state 31

    (78) return -> RETURN . exp
    (79) return -> RETURN .
    (44) exp -> . exp1
    (45) exp1 -> . NUMBER
    (46) exp1 -> . STRING
    (47) exp1 -> . ID
    (48) exp1 -> . TRUE
    (49) exp1 -> . FALSE
    (50) exp1 -> . LPAREN exp RPAREN
    (51) exp1 -> . exp2
    (52) exp2 -> . exp2 DPLUS
    (53) exp2 -> . exp2 DMINUS
    (54) exp2 -> . NOT exp2
    (55) exp2 -> . exp3
    (56) exp3 -> . exp3 TIMES exp4
    (57) exp3 -> . exp3 DIVIDE exp4
    (58) exp3 -> . exp3 MOD exp4
    (59) exp3 -> . exp4
    (60) exp4 -> . exp4 PLUS exp5
    (61) exp4 -> . exp4 MINUS exp5
    (62) exp4 -> . exp5
    (63) exp5 -> . exp5 LESS exp6
    (64) exp5 -> . exp5 GREATER exp6
    (65) exp5 -> . exp5 LESS_EQUAL exp6
    (66) exp5 -> . exp5 GREATER_EQUAL exp6
    (67) exp5 -> . exp6
    (68) exp6 -> . exp6 EQUALS exp7
    (69) exp6 -> . exp6 DIFFERENT exp7
    (70) exp6 -> . exp7
    (71) exp7 -> . exp7 AND exp8
    (72) exp7 -> . exp8
    (73) exp8 -> . exp8 OR exp9
    (74) exp8 -> . exp9
    (75) exp9 -> . exp9 ASSIGN exp1
    (76) exp9 -> . exp9 COLONEQ exp1
    (77) exp9 -> . exp1

  ! shift/reduce conflict for ID resolved as shift
    IF              reduce using rule 79 (return -> RETURN .)
    FOR             reduce using rule 79 (return -> RETURN .)
    RETURN          reduce using rule 79 (return -> RETURN .)
    RCHAVES         reduce using rule 79 (return -> RETURN .)
    ELSE            reduce using rule 79 (return -> RETURN .)
    NUMBER          shift and go to state 46
    STRING          shift and go to state 47
    ID              shift and go to state 48
    TRUE            shift and go to state 49
    FALSE           shift and go to state 50
    LPAREN          shift and go to state 63
    NOT             shift and go to state 52

  ! ID              [ reduce using rule 79 (return -> RETURN .) ]

    exp                            shift and go to state 64
    exp1                           shift and go to state 45
    exp2                           shift and go to state 51
    exp3                           shift and go to state 53
    exp4                           shift and go to state 54
    exp5                           shift and go to state 55
    exp6                           shift and go to state 56
    exp7                           shift and go to state 57
    exp8                           shift and go to state 58
    exp9                           shift and go to state 59

state 32

    (7) signature -> LPAREN sigparams RPAREN .
    (8) signature -> LPAREN sigparams RPAREN . funcreturn
    (13) funcreturn -> . type
    (14) funcreturn -> . LPAREN type RPAREN
    (40) type -> . INT
    (41) type -> . STRING
    (42) type -> . VAR
    (43) type -> . BOOL

    LCHAVES         reduce using rule 7 (signature -> LPAREN sigparams RPAREN .)
    LPAREN          shift and go to state 33
    INT             shift and go to state 36
    STRING          shift and go to state 37
    VAR             shift and go to state 38
    BOOL            shift and go to state 39

    funcreturn                     shift and go to state 65
    type                           shift and go to state 35

state 33

    (14) funcreturn -> LPAREN . type RPAREN
    (40) type -> . INT
    (41) type -> . STRING
    (42) type -> . VAR
    (43) type -> . BOOL

    INT             shift and go to state 36
    STRING          shift and go to state 37
    VAR             shift and go to state 38
    BOOL            shift and go to state 39

    type                           shift and go to state 66

state 34

    (10) signature -> LPAREN RPAREN funcreturn .

    LCHAVES         reduce using rule 10 (signature -> LPAREN RPAREN funcreturn .)


state 35

    (13) funcreturn -> type .

    LCHAVES         reduce using rule 13 (funcreturn -> type .)


state 36

    (40) type -> INT .

    LCHAVES         reduce using rule 40 (type -> INT .)
    COMMA           reduce using rule 40 (type -> INT .)
    RPAREN          reduce using rule 40 (type -> INT .)
    ASSIGN          reduce using rule 40 (type -> INT .)
    COLONEQ         reduce using rule 40 (type -> INT .)
    IF              reduce using rule 40 (type -> INT .)
    ID              reduce using rule 40 (type -> INT .)
    FOR             reduce using rule 40 (type -> INT .)
    RETURN          reduce using rule 40 (type -> INT .)
    RCHAVES         reduce using rule 40 (type -> INT .)
    ELSE            reduce using rule 40 (type -> INT .)


state 37

    (41) type -> STRING .
